--- a/pom.xml
+++ b/pom.xml
@@ -144,20 +144,6 @@
             <version>1.23.5</version>
         </dependency>
 
-        <!-- JSON -->
-        <dependency>
-            <groupId>com.beust</groupId>
-            <artifactId>klaxon</artifactId>
-            <version>5.6</version>
-        </dependency>
-
-        <!-- Logging -->
-        <dependency>
-            <groupId>io.github.microutils</groupId>
-            <artifactId>kotlin-logging-jvm</artifactId>
-            <version>2.1.23</version>
-        </dependency>
-
         <dependency>
             <groupId>decentralized-identity</groupId>
             <artifactId>uni-resolver-local</artifactId>
@@ -185,6 +171,18 @@
             <groupId>io.fusionauth</groupId>
             <artifactId>fusionauth-jwt</artifactId>
             <version>5.2.2</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.networknt</groupId>
+            <artifactId>json-schema-validator</artifactId>
+            <version>1.0.83</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.apache.commons</groupId>
+                    <artifactId>commons-lang3</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
 
         <dependency>
